<resources>
    <string name="app_name">Car Byer</string>
    <string name="hello">Click here to register</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password_field">Repeat password</string>
    <string name="phone">Phone</string>
    <string name="seller">Seller</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="error_message_empty_fields">Please insert username and password</string>
    <string name="error_message_passwords_dont_match">Passwords don`t match</string>
    <string name="error_password_missmatch">Please enter the same password twice</string>
    <string name="error_login_failed">Please check your password and try again</string>
    <string name="role_seller">seller</string>
    <string name="role_buyer">buyer</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_successful">Registration successful</string>
    <string name="welcome_message">Welcome!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this %1$s?</string>
    <string name="cars_count">Cars: %1$d</string>
    <string name="dealer">Dealer</string>
    <string name="delete_successful">Deleted successfully</string>
    <string name="invalid_data">Invalid data</string>
    <string name="dealer_created_successfully">Dealer created successfully</string>
    <string name="dealer_updated_successfully">Dealer updated successfully</string>
    <string name="kilometers_suffix">%1$d km</string>
    <string name="engine_label">Engine: %1$s</string>
    <string name="engine_na">N/A</string>
    <string name="transmission_automatic">Automatic</string>
    <string name="transmission_manual">Manual</string>
    <string name="transmission_label">Transmission: %1$s</string>
    <string name="car">Car</string>
    <string name="cars_log_loaded">Loaded cars</string>
    <string name="cars_error_prefix">Error: %1$s</string>
    <string name="car_created_successfully">Car created successfully</string>
    <string name="car_updated_successfully">Car updated successfully</string>
    <string name="cars_title">Cars</string>
    <string name="filter_brand_hint">Brand</string>
    <string name="filter_city_hint">City</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_clear">Clear</string>
    <string name="filter_from_year_hint">From year</string>
    <string name="filter_to_year_hint">To year</string>
    <string name="menu_logout">Logout</string>
</resources>